--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,40 +1,84 @@
+
 <!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <!-- Required meta tags -->
+<html>
+  <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta property="og:title" content="Personal Portfolio">
-    <meta property="og:description" content="My Personal Portfolio">
-    <meta property="og:url" content="{{ url }}">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    
+    <title>Hobbies</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
+    <link rel="stylesheet" href="/static/styles/main.css">
+    <link rel='icon' href='/static/img/favicon.ico' type='image/x-icon' />
+    
+  </head>
+  <body>
 
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link
-        href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
-        rel="stylesheet">
-
-    <link lang='sass' rel="stylesheet" href="./static/styles/main.css">
-    <link rel='icon' href='./static/img/favicon.ico' type='image/x-icon' />
-    <title>{{ title }}</title>
-</head>
-
-<body>
-    <header class="nav-bar">
-        <div class="nav-content">
-            <a href="/">
-                <div class="nav-logo">
-                    <img src="./static/img/logo.svg" />
+    <section class="hero has-background-primary is-fullheight">
+        <div class="hero-body">
+        <div class="container has-text-centered">    
+            <h1 class="title is-1 has-text-white">Hobbies</h1>
+                <div class="columns">
+                    <div class="column">
+                        <div class="card">
+                            <div class="card-content">
+                                <figure class="image is-3by2">
+                                    <img src="https://media.timeout.com/images/105863223/750/422/image.jpg" />
+                                </figure>
+                                <br/>
+                                <p class="title">
+                                    Star Wars
+                                </p>
+                                <p class="subtitle">
+                                
+                                </p>
+                                <ul>
+                                    
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="column">
+                        <div class="card">
+                            <div class="card-content">
+                                <figure class="image is-3by2">
+                                    <img src="https://hips.hearstapps.com/amv-prod-gp.s3.amazonaws.com/gearpatrol/wp-content/uploads/2019/11/Mechanical-Keyboard-Buying-Guide-Gear-Patrol-Feature.jpg?crop=1xw:0.65xh;center,top&resize=1200:*"/>
+                                </figure>
+                                <br/>
+                                <p class="title">
+                                    Mechanical Keyboards
+                                </p>
+                                <p class="subtitle">
+                                
+                                </p>
+                                <ul>
+                                    
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="column">
+                        <div class="card">
+                            <div class="card-content">
+                                <figure class="image is-3by2">
+                                    <img src="https://assets-prd.ignimgs.com/2021/12/30/36190303-image-7-1640880187142.png"/>
+                                </figure>
+                                <br/>
+                                <p class="title">
+                                    Video Games
+                                </p>
+                                <p class="subtitle">
+                                
+                                </p>
+                                <ul>
+                                    
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
                 </div>
-            </a>
+            </div>
         </div>
-    </header>
+    </section>
 
-    <div class="profile">
-        <div id="profile-picture" class="profile-picture">
-            <img src="./static/img/logo.jpg">
-        </div>
-        <h1>{{ title }}</h1>
-    </div>
-</body>
+  </body>
 </html>
