--- a/app/templates/contact.html
+++ b/app/templates/contact.html
@@ -12,10 +12,13 @@
                     </p>
                 </div>
                 <div class="column">
+
+                    <form action="{{ url_for('contact')}}" method="post">
+
                     <div class="block">
                         <div class="field">
                             <div class="control has-icons-left">
-                                <input class="input is-large" type="text" placeholder="Name">
+                                <input name="name" class="input is-large" type="text" placeholder="Name">
                                 <span class="icon is-large is-left">
                                 <i class="fas fa-user"></i>
                                 </span>
@@ -23,7 +26,15 @@
                         </div>
                         <div class="field">
                             <div class="control has-icons-left">
-                                <input class="input is-large" type="text" placeholder="Email">
+                                <input name="subject" class="input is-large" type="text" placeholder="Subject">
+                                <span class="icon is-large is-left">
+                                <i class="fas fa-eraser"></i>
+                                </span>
+                            </div>
+                        </div>
+                        <div class="field">
+                            <div class="control has-icons-left">
+                                <input name="email" class="input is-large" type="email" placeholder="Email">
                                 <span class="icon is-large is-left">
                                 <i class="fas fa-envelope"></i>
                                 </span>
@@ -31,19 +42,22 @@
                         </div>
                         <div class="field">
                             <div class="control has-icons-left">
-                                <textarea class="textarea is-large" placeholder="Message"></textarea>
+                                <textarea name="message" class="textarea is-large" placeholder="Message"></textarea>
                             </div>
                         </div>
                     </div>
                     <div class="block">
                         <div class="field is-grouped is-grouped-centered">
                             <p class="control">
-                                <a class="button is-rounded is-large is-primary has-background-white has-text-primary-dark">
+                                <button value="submit" type="submit" class="button is-rounded is-large is-primary has-background-white has-text-primary-dark">
                                 Submit
-                                </a>
+                                </button>
                             </p>
                         </div>
                     </div>
+
+                </form>
+
                 </div>
             </div>
         </div>
