Updated hobbies HTML page to match the template

--- a/app/static/styles/main.css
+++ b/app/static/styles/main.css
@@ -95,3 +95,17 @@ body {
     font-size: 50px;
     font-weight: 700;
 }
+
+.has-hobbies-bg {
+    background: url("../img/bg.jpg") center center;
+    background-size: cover;
+}
+
+.blue-outlined {
+    color: lightgray;
+    text-shadow:
+        -1px -1px 0 darkcyan,
+        1px -1px 0 darkcyan,
+        -1px 1px 0 darkcyan,
+        1px 1px 0 darkcyan;
+}
