--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -7,7 +7,7 @@
 
   <title>Portfolio</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="../static/styles/main.css">
 
 </head>
 
@@ -46,7 +46,7 @@
   <section class="hero has-jungle-bg is-fullheight">
     <div class="hero-body">
       <div class="container has-text-centered">
-
+        <h1 class="title is-1 is-uppercase has-text-white ">Work Experience</h1>
         <div class="columns">
 
           <!-- start card -->
@@ -196,6 +196,30 @@
       </div>
     </div>
   </section>
+  <section class="hero has-hobbies-bg is-fullheight">
+    <div class="hero-body">
+        <div class="container has-text-centered">
+            <h1 class="title is-1 is-uppercase blue-outlined">Hobbies</h1>
+            <div class="columns">
+                {% for hobbies in data[title]['hobbies'] %}
+                <div class="column">
+                    <div class="card">
+                        <div class="card-content">
+                            <figure class="image is-3by2">
+                                <img src={{ hobbies['image'] }}>
+                            </figure>
+                            <br/>
+                            <p class="title">
+                                {{hobbies['hobby']}}
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                {% endfor %}
+            </div>
+        </div>
+    </div>
+</section>
 
 
   <div id="map" style="width: 100%; height: 100%; position: relative;"></div>
