--- a/app/static/styles/main.css
+++ b/app/static/styles/main.css
@@ -9,6 +9,11 @@ html {
     object-fit: scale-down;
 }
 
+.is-transparent {
+    background-color: transparent;
+    background-image: none;
+}
+
 .has-jungle-bg {
     background: url("../img/jungle.jpg") center center;
     background-size: cover;
@@ -43,3 +48,4 @@ html {
         -1px 1px 0 darkcyan,
         1px 1px 0 darkcyan;
 }
+
