--- a/app/static/styles/main.css
+++ b/app/static/styles/main.css
@@ -1,6 +1,7 @@
 body,
 html {
     height: 100%;
+    background-color: white;
 }
 
 .same-size {
@@ -49,3 +50,11 @@ html {
         1px 1px 0 darkcyan;
 }
 
+.about {
+    height: 100%;
+    background-color: white;
+}
+
+.about-column {
+    height: 700px;
+}
