--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -12,15 +12,23 @@
 
 </head>
 
-<body class="has-background-info">
+<body>
   <!--Navbar start-->
-  <nav class="navbar" id="grnav">
+  <nav class="navbar is-transparent" id="grnav">
     <div class="navbar-menu">
         <div class="navbar-start" id="topnavbar">
           {% for person in data %}
-          <a class="navbar-item" href={{ person }}>
+          {% if title == person %}
+          <a class="navbar-item has-text-weight-bold" href={{ person }}>
             {{ data[person]["name"] }}
           </a>
+          {% else %}
+            <a class="navbar-item" href={{ person }}>
+            {{ data[person]["name"] }}
+          </a>
+
+          {% endif %}
+
           {% endfor %}
       </div>
       <div class="navbar-end">
@@ -37,27 +45,34 @@
     </div>
   </nav>
   <!--Navbar end-->
-  <div class="column"></div>
+  
 
-  <div class="columns">
-    <div class="column"></div>
-    <div class="column">
-      <div class="box">
+
+
+
+
+
+      <section class="hero has-background-info is-medium p-6">
+    <div class="hero-body p-6">
+      <div class="container is-fluid has-text-centered p-6">
+          <div class="columns">
+    <div class="column is-one-third" class="has-background-white about-column">
+      <div class="box about">
         <p class="title is-5"> {{ data[title]['name'] }} </p>
         <img src={{ data[title]['image'] }} class="same-size">
       </div>
     </div>
-    <div class="column is-narrow">
-      <div class="box" style="width: 700px;">
+    <div class="column" class="has-background-white about-column">
+      <div class="box about">
         <p class="title is-5">About Me</p>
         <p class="subtitle">{{ data[title]['about'] }}</p>
       </div>
     </div>
-    <div class="column"></div>
   </div>
-
-
-
+      </div>
+  </section>
+  
+  
   <section class="hero has-jungle-bg is-fullheight">
     <div class="hero-body">
       <div class="container has-text-centered">
@@ -170,12 +185,12 @@
   <div id="map" style="width: 100%; height: 100%; position: relative;"></div>
 
   <section class="hero has-jungle-bg is-fullheight">
-    <div class="hero-body ">
-      <div class="container">
+    <div class="hero-body">
+      <div class="container is-fluid">
         <div class="columns is-vcentered">
           <div class="column has-text-centered">
             <p class="title is-1 has-text-white">
-              Contact Form
+              Contact {{title|title}}
               <h1 class="title"></h1>
             </p>
           </div>
