removed portfolio button at footer

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -313,12 +313,12 @@
           </button>
 
 
-          <button class="button is-large">
+          <!-- <button class="button is-large">
             <span class="icon is-medium">
               <i class="fas fa-link"></i>
             </span>
             <span>Portfolio</span>
-          </button>
+          </button> -->
         </buttons>
 
       </div>
