--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -298,19 +298,23 @@
 
 
         <buttons>
-          <button class="button is-large">
-            <span class="icon is-medium">
-              <i class="fab fa-github"></i>
-            </span>
-            <span>GitHub</span>
-          </button>
+          <a href={{data[title]['social'][1]['val']}}>
+            <button class="button is-large">
+              <span class="icon is-medium">
+                <i class="fab fa-linkedin"></i>
+              </span>
+              <span>{{data[title]['social'][1]['name']}}</span>
+            </button>
+          </a>
 
-          <button class="button is-large">
-            <span class="icon is-medium">
-              <i class="fab fa-linkedin"></i>
-            </span>
-            <span>LinkedIn</span>
-          </button>
+          <a href={{data[title]['social'][0]['val']}}>
+            <button class="button is-large">
+              <span class="icon is-medium">
+                <i class="fab fa-github"></i>
+              </span>
+              <span>{{data[title]['social'][0]['name']}}</span>
+            </button>
+          </a>
 
 
           <!-- <button class="button is-large">
