--- a/app/static/styles/main.css
+++ b/app/static/styles/main.css
@@ -58,3 +58,26 @@ html {
 .about-column {
     height: 700px;
 }
+
+.profile {
+    text-align: center;
+    height: 240px;
+}
+.profile img {
+    border-radius: 50%;
+    max-width: 100%;
+    max-height: 100%;
+    margin-left: auto;
+    margin-right: auto;
+    display: block;        
+    padding: 20px;
+}
+
+.profile .profile-picture {
+margin-bottom: 5px;
+height: 240px;
+}
+
+.card {
+    height: 100%;
+}
