--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <title>Portfolio</title>
+  <title>{{title|title}}'s Portfolio</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
   <script src="https://kit.fontawesome.com/6f97194b39.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="../static/styles/main.css">
@@ -46,8 +46,31 @@
   </nav>
   <!--Navbar end-->
   
-
   <section class="hero has-background-info is-medium p-6">
+    <div class="hero-body p-6">
+      <div class="container has-text-centered">
+        <div class="block">
+          <div class="card">
+            <div class="card-content">
+                <div class="profile">
+                  <div id="profile-picture" class="profile-picture">
+                    <img src={{ data[title]['image'] }}>
+                </div>
+                </div>
+              <p class="title is-4"> {{ data[title]['name'] }} </p>
+            </div>
+          </div>
+          <div class="card" class="has-background-white about-column">
+            <div class="box about">
+              <p class="title is-5">About Me</p>
+              <p class="subtitle">{{ data[title]['about'] }}</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  <!-- <section class="hero has-background-info is-medium p-6">
     <div class="hero-body p-6">
       <div class="container is-fluid has-text-centered p-6">
           <div class="columns">
@@ -65,7 +88,7 @@
           </div>
       </div>
     </div>
-  </section>
+  </section> -->
   
 
   
