--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -49,7 +49,7 @@
   <section class="hero has-background-info is-medium p-6">
     <div class="hero-body p-6">
       <div class="container has-text-centered">
-        <div class="block">
+        <div class="column is-8 is-offset-2">
           <div class="card">
             <div class="card-content">
                 <div class="profile">
